[project]
name = "oxdaepyutils"
description = "Data Science & Statistics python utilities from the Oxford Pandemic Sciences Institute Data Analytics & Epidemiology group"
readme = "README.md"
authors = [
    { name = "Adam Fowler", email = "adam.fowler@spc.ox.ac.uk" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["data","analytics","matplotlib","stats","epidemiology","pandemic","science"]
dependencies = [
    "pandas",
]
requires-python = ">=3.12"
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/BDI-pathogens/oxdaepyutils"
Repository = "https://github.com/BDI-pathogens/oxdaepyutils.git"
Issues = "https://github.com/BDI-pathogens/oxdaepyutils/issues"

[tool]

[tool.hatch.version]
path = "src/oxdaepyutils/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oxdaepyutils"]